--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -17,6 +17,10 @@ main {
     }
 }
 
+.heightfill{
+    height: 80vh;
+}
+
 .layout {
     p {
         font-size: 4rem;
@@ -93,7 +97,5 @@ main {
             background-color: rgb(0, 255, 0);
         }
     }
-
-
 
 }
