--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -8,7 +8,7 @@ main {
 
 .rounded-button {
     padding: 0.3rem 1rem;
-    border-radius: 1rem;
+    // border-radius: 1rem;
     background-color: lavenderblush;
     color: black;
 
@@ -79,7 +79,7 @@ main {
         justify-content: space-between;
 
         li {
-            border-radius: 1rem;
+            // border-radius: 1rem;
 
             display: flex;
             justify-content: center;
