--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -5,3 +5,11 @@
         // font-family: Signifier;
     }
 }
+
+.blog-post{
+    h1{
+        font-size: 3rem;
+        font-weight: 90;
+        // font-family: Signifier;
+    }
+}
