--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -1,15 +1,24 @@
-.blog-page{
-    h1{
+.blog-page {
+    h1 {
         font-size: 3rem;
         font-weight: 90;
         // font-family: Signifier;
     }
 }
 
-.blog-post{
-    h1{
+.blog-post {
+    h1 {
         font-size: 3rem;
         font-weight: 90;
         // font-family: Signifier;
+    }
+}
+
+.image-wrapper {
+    overflow: hidden;
+    
+    img {
+        max-height: 50vh;
+        height: 100%;
     }
 }
