--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -1,24 +1,122 @@
 .blog-page {
+    width: 100vw;
+    overflow: hidden;
+    padding: 0rem 0.5rem;
+
+    .project-list {
+        padding: 0rem 0.5rem;
+    }
+
     h1 {
         font-size: 3rem;
         font-weight: 90;
-        // font-family: Signifier;
+        font-family: Kleukens;
     }
 }
+
 
 .blog-post {
-    h1 {
-        font-size: 3rem;
-        font-weight: 90;
-        // font-family: Signifier;
+    padding: 1rem;
+    padding-top: 4vh;
+
+}
+
+.blogpostcover {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    margin-bottom: 5.5rem;
+
+
+    h1.headline {
+        // width: 80vw;
+        grid-column: 3/11;
+        margin-bottom: 1.5rem;
+
+        font-family: Kleukens;
+        font-size: 5rem;
+        line-height: 4rem;
+        margin-bottom: 3.5rem;
+        text-align: center;
+
+    }
+
+    h2 {
+        grid-column: span 2;
+        font-family: Kleukens;
+        font-size: 1.8rem;
+    }
+
+    h2:first-child{
+        text-align: right;
+    }
+
+    .subhead {
+        grid-column: 1/13;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 1rem;
+
+        h2 {
+            // width: 16vw;
+            font-family: Kleukens;
+            font-size: 1.8rem;
+        }
+    }
+
+    .cover-image {
+        grid-column: 6/8;
+
+        div {
+            width: 100%;
+            height: 100%;
+        }
+
+        p{
+            margin-top: 0.2rem;
+            font-family: Kleukens;
+            font-size: 0.8rem;
+        }
+    }
+
+    .fullwidth-image {
+        // grid-column: 3/10;
+
+        overflow: hidden;
+        width: 100vw;
+        height: 80vh;
+
+        div {
+            width: 100%;
+            height: 100%;
+
+            display: flex;
+            align-items: center;
+            overflow: hidden;
+
+            img {
+                object-fit: contain;
+            }
+
+        }
     }
 }
 
-.image-wrapper {
-    overflow: hidden;
-    
-    img {
-        max-height: 50vh;
-        height: 100%;
+.blog-post-content {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+
+    .description{
+        grid-column: span 6;
+
+        p{
+            font-size: 2rem;
+        }
+    }
+
+    .html-content {
+        // grid-column: 3/11;
+        // grid-column: 1/8;
+        grid-column: span 6;
+        margin-bottom: 1.5rem;
     }
 }
