--- a/src/styles/typo.scss
+++ b/src/styles/typo.scss
@@ -10,11 +10,16 @@
 
 @font-face {
    font-family: "PPAgrandir";
-   src: url('../assets/fonts/PPAgrandir/PPAgrandir-Variable.woff2') format("woff2-variations");
-   // src: url("path/to/font/file/myvariablefont.woff2") format("woff2-variations");
+   src: url('../assets/fonts/PPAgrandir/PPAgrandir-Variable.woff2') format("woff2-variations"),
+        url('../assets/fonts/PPAgrandir/PPAgrandir-Variable.woff2') format("woff2 supports variations");
    font-weight: 0 950;
    // font-stretch: 225% 125%;
-   font-variation-settings: "wdth" 125;
+   font-variation-settings: "wdth" 100;
+   font-variation-settings: "ital" 1;
+   font-style: oblique 0deg 12deg;
+   font-stretch: 75% 175%;
+
+
    font-optical-sizing: auto;
    font-variation-settings: "opsz" 36;
 }
@@ -25,8 +30,4 @@ html {
    // font-family: Signifier;
    font-family: PPAgrandir;
 
-}
-
-p {
-   color: aqua;
 }
