--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -1,7 +1,20 @@
 .html-content{
+    margin-bottom: 3.5rem;
     font-family: Kleukens;
 
     p{
-        font-size: 1.5rem;
+        font-size: 1.25rem;
+        margin-bottom: 1rem;
+    }
+
+
+    h2{
+        margin-bottom: 1.5rem;
+        font-size: 1.8rem;
+        // font-weight: bold;
+    }
+
+    a{
+        color: grey;
     }
 }
