--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -5,12 +5,44 @@
 
     .project-list {
         padding: 0rem 0.5rem;
+        margin-top: 2rem;
+    }
+    
+    .project-preview{
+        display: flex;
+        width: 100%;
+        margin: 1rem 0rem;
     }
 
     h1 {
-        font-size: 3rem;
+        font-size: 5rem;
         font-weight: 90;
+        line-height: 4rem;
         font-family: Kleukens;
+        display: inline;
+    }
+    
+    h2{
+        display: inline;
+
+        font-size: 1.8rem;
+        font-family: Kleukens;
+        margin: 0rem 0.5rem;
+        // vertical-align: top;
+    }
+
+    .preview-image{
+        height: 4rem;
+        width: auto;
+        
+        div {
+            width: 100%;
+            height: 100%;
+        }
+
+        img{
+            object-fit: contain;
+        }
     }
 }
 
@@ -46,7 +78,7 @@
         font-size: 1.8rem;
     }
 
-    h2:first-child{
+    h2:first-child {
         text-align: right;
     }
 
@@ -71,11 +103,11 @@
             height: 100%;
         }
 
-        p{
-            margin-top: 0.2rem;
-            font-family: Kleukens;
-            font-size: 0.8rem;
-        }
+        // p{
+        //     margin-top: 0.2rem;
+        //     font-family: Kleukens;
+        //     font-size: 0.8rem;
+        // }
     }
 
     .fullwidth-image {
@@ -105,18 +137,36 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
 
-    .description{
-        grid-column: span 6;
+    .description {
+        grid-column: span 9;
+        margin-bottom: 3.5rem;
 
-        p{
+        p {
             font-size: 2rem;
+            line-height: 2.2rem;
         }
     }
 
-    .html-content {
-        // grid-column: 3/11;
-        // grid-column: 1/8;
-        grid-column: span 6;
-        margin-bottom: 1.5rem;
+    // .html-content {
+    //     margin-bottom: 3.5rem;
+
+    //     h2{
+    //         margin-bottom: 1.5rem;
+    //         font-size: 1.5rem;
+    //         // font-weight: bold;
+    //     }
+    // }
+
+    .image-section {
+        width: 100%;
+        display: flex;
+        gap: 1rem;
     }
+
+}
+
+p.caption {
+    margin-top: 0.2rem;
+    font-family: Kleukens;
+    font-size: 0.8rem;
 }
