--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -34,6 +34,7 @@
     .preview-image{
         height: 4rem;
         width: auto;
+        margin: 0rem 0.5rem;
         
         div {
             width: 100%;
