--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,7 +4,7 @@ html {
 }
 
 body{
-   background-color: #d4d4d4;
+   background-color: #e8e6e6;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
