--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -1,9 +1,12 @@
 .html-content{
     margin-bottom: 3.5rem;
     font-family: Kleukens;
+    // overflow: auto;
+    word-wrap: break-word;
 
     p{
         font-size: 1.25rem;
+        line-height: 1.5rem;
         margin-bottom: 1rem;
     }
 
@@ -12,6 +15,12 @@
         margin-bottom: 1.5rem;
         font-size: 1.8rem;
         // font-weight: bold;
+    }
+
+    h3{
+        margin-bottom: 1.5rem;
+        font-size: 1.25rem;
+        font-weight: bold;
     }
 
     a{
