--- a/src/styles/typo.scss
+++ b/src/styles/typo.scss
@@ -9,16 +9,20 @@
 }
 
 @font-face {
+   font-family: PPCirka;
+   src: url('../assets/fonts/PPCirka/PPCirka-Regular.woff');
+}
+
+@font-face {
    font-family: "PPAgrandir";
    src: url('../assets/fonts/PPAgrandir/PPAgrandir-Variable.woff2') format("woff2-variations"),
         url('../assets/fonts/PPAgrandir/PPAgrandir-Variable.woff2') format("woff2 supports variations");
    font-weight: 0 950;
    // font-stretch: 225% 125%;
-   font-variation-settings: "wdth" 100;
+   // font-variation-settings: "wdth" 100;
    font-variation-settings: "ital" 1;
    font-style: oblique 0deg 12deg;
    font-stretch: 75% 175%;
-
 
    font-optical-sizing: auto;
    font-variation-settings: "opsz" 36;
