--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -1,5 +1,7 @@
 .html-content{
-    margin-bottom: 3.5rem;
+    // margin-bottom: 3.5rem;
+    height: 100%;
+
     font-family: Kleukens;
     // overflow: auto;
     word-wrap: break-word;
@@ -26,4 +28,52 @@
     a{
         color: grey;
     }
+
+    .image-section{
+        height: 100%;
+    }
 }
+
+.swiper{
+    
+    height: 100%;
+    // z-index: -1;
+    // .swiper-buttons{
+    //     position: absolute;
+    //     display: flex;
+    //     z-index: 2;
+    //     width: 100%;
+    //     height: 100%;
+
+    //     div{
+    //         width: 50%;
+    //         height: 100%;
+    //     }
+    // }
+}
+
+
+.swiper-buttons{
+    position: absolute;
+    bottom: 0vh;
+    display: inline-flex;
+    z-index: 1000;
+    width: 100%;
+    height: 100%;
+ }
+ 
+ .swiper-button-prev,
+ .swiper-button-next {
+    display: flex;
+    width: 50%;
+    outline: none !important;
+ }
+ 
+//  .swiper-button-prev{
+//     cursor: url('arrow-left.svg'), auto;	
+//  }
+ 
+//  .swiper-button-next{
+//     cursor: url('arrow-right.svg'), auto;	
+//     transform-origin: center;
+//  }
