--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -69,6 +69,7 @@
     .cover-title {
         position: absolute;
         bottom: 1rem;
+        z-index: 1;
         
         padding: 1rem;
         grid-column: 1/13;
@@ -120,10 +121,10 @@
     .cover-image {
         grid-column: 1/13;
         height: 100vh;
-
+        // overflow: hidden;
         div {
-            width: 100%;
-            height: 100%;
+            // width: 100%;
+            // height: 100%;
         }
     }
 
