--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -35,7 +35,6 @@
 }
 
 .swiper{
-    
     height: 100%;
     // z-index: -1;
     // .swiper-buttons{
@@ -50,8 +49,17 @@
     //         height: 100%;
     //     }
     // }
+    .swiper-slide{
+        width: auto;
+        max-width: 100%;
+
+    }
 }
 
+.swiper-img{
+    object-fit: contain;
+    height: 100%;
+}
 
 .swiper-buttons{
     position: absolute;
