--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -12,6 +12,10 @@
 
         width: calc(100vw - 0.6rem);
 
+        a {
+            color: #000000;
+        }
+
         ul {
             li {
                 border-radius: 1rem;
@@ -19,16 +23,24 @@
             }
         }
 
-        .nav-group{
+        .nav-group {
             display: flex;
         }
     }
 
-    .nav-meta, .color-modes {
+    .nav-meta {
         display: flex;
 
         li {
-            background-color: white;
+            background-color: rgb(255, 255, 255);
+        }
+    }
+
+    .color-modes {
+        display: flex;
+
+        li {
+            background-color: rgb(255, 255, 255);
         }
     }
 
@@ -54,13 +66,13 @@
             background-color: rgb(134, 134, 255);
             // background-image: linear-gradient(rgb(134, 134, 255), yellow);
         }
-        
+
         #blog {
             // background-image: linear-gradient( rgb(149, 182, 0), rgb(134, 134, 255));
             background-color: rgb(68, 180, 68);
 
         }
-        
+
         #work {
             background-color: rgb(254, 214, 54);
             // background-image: linear-gradient( rgb(254, 214, 54), rgb(255, 6, 6),);
