--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -49,16 +49,18 @@
         display: flex;
 
         li {
-            font-weight: 100;
+            font-weight: 300;
             font-style: italic;
             font-synthesis: none;
             font-stretch: 175%;
             text-align: center;
             transition: all 0.5s ease;
+
         }
 
         li:hover {
-            font-weight: 900;
+            font-weight: 500;
+            // font-stretch: 275%;
         }
 
 
@@ -75,6 +77,11 @@
 
         #work {
             background-color: rgb(254, 214, 54);
+
+            border-style: solid;
+            border-width: 1px;
+            border-color: black;
+            
             // background-image: linear-gradient( rgb(254, 214, 54), rgb(255, 6, 6),);
 
         }
