--- a/src/styles/space.scss
+++ b/src/styles/space.scss
@@ -1,12 +1,45 @@
-
-.space-page{
+.space-page {
+    width: 100%;
     min-height: 100vh;
 
-    iframe{
-        margin: 0.5rem;
-        height: 100%;
-        // width: 100vw;
+    overflow: hidden;
+
+
+    iframe {
+        width: 100%;
+        height: 60vh;
+        border-radius: 0.5rem;
     }
 
-    
+    .project-list {
+        padding: 0rem 0.5rem;
+        margin-top: 2rem;
+
+        display: grid;
+        grid-template-columns: 1fr;
+        // grid-template-columns: repeat(auto-fill, minmax(30vw, 1fr));
+        grid-template-rows: masonry;
+        gap: 0.5rem;
+    }
+
+    .project-preview {
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+    }
+
+
+    h1 {
+        display: inline;
+        font-family: "Helvetica";
+        font-size: 3rem;
+        line-height: 2.5rem;
+    }
+
+    h2 {
+        display: inline;
+        max-width: 8vw;
+        // grid-column: span 1;
+        font-family: Kleukens;
+        font-size: 0.8rem;
+    }
 }
