--- a/src/styles/space.scss
+++ b/src/styles/space.scss
@@ -37,9 +37,10 @@
 
     h2 {
         display: inline;
-        max-width: 8vw;
+        // max-width: 8vw;
         // grid-column: span 1;
         font-family: Kleukens;
+        font-size: 3rem;
         font-size: 0.8rem;
     }
 }
