--- a/src/styles/space.scss
+++ b/src/styles/space.scss
@@ -44,3 +44,144 @@
         font-size: 0.8rem;
     }
 }
+
+
+.spacepostcover {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    margin-bottom: 5.5rem;
+
+    .cover-title {
+        position: absolute;
+        bottom: 1rem;
+        z-index: 1;
+
+        padding: 1rem;
+        grid-column: 1/13;
+        gap: 1rem;
+
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+
+    }
+
+    .headline {
+        grid-column: 1/4;
+
+    }
+
+    h1 {
+        display: inline;
+        font-size: 3rem;
+        line-height: 3rem;
+        // background-color: rgb(254, 214, 54);
+        color: #e8e6e6;
+    }
+
+    h2 {
+        display: inline;
+        grid-column: span 1;
+        font-family: Kleukens;
+        font-size: 1rem;
+        // background-color: rgb(254, 214, 54);
+        color: #e8e6e6;
+    }
+
+
+    .collaborators {
+        grid-column: span 2;
+    }
+
+    .subhead {
+        grid-column: 1/13;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 1rem;
+
+        h2 {
+            // width: 16vw;
+            font-family: Kleukens;
+            font-size: 1.8rem;
+        }
+    }
+
+    .cover-image {
+        grid-column: 1/13;
+        height: 100vh;
+
+        // overflow: hidden;
+        div {
+            // width: 100%;
+            // height: 100%;
+        }
+
+        iframe {
+            width: 100%;
+            height: 100%;
+            // border-radius: 0.5rem;
+        }
+    }
+
+    .fullwidth-image {
+        // grid-column: 3/10;
+
+        overflow: hidden;
+        width: 100vw;
+        height: 80vh;
+
+        div {
+            width: 100%;
+            height: 100%;
+
+            display: flex;
+            align-items: center;
+            overflow: hidden;
+
+            img {
+                object-fit: contain;
+            }
+
+        }
+    }
+}
+
+.space-post-content {
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 1rem;
+
+    .description {
+        grid-column: span 9;
+        margin-bottom: 3.5rem;
+
+        p {
+            font-size: 2rem;
+            line-height: 2.2rem;
+        }
+    }
+
+    .image-section {
+        width: 100%;
+        display: flex;
+        flex: 1 1 0;
+
+        gap: 1rem;
+
+        div {
+            flex-basis: 100%;
+        }
+    }
+
+    .text-section {
+        max-width: 100%;
+        display: flex;
+        gap: 1rem;
+    }
+}
+
+p.caption {
+    margin-top: 0.2rem;
+    font-family: Kleukens;
+    font-size: 0.8rem;
+}
