--- a/src/styles/space.scss
+++ b/src/styles/space.scss
@@ -1,32 +1,104 @@
 .space-page {
     width: 100%;
     min-height: 100vh;
+    padding-bottom: 10vh;
 
     overflow: hidden;
-
-
-    iframe {
-        width: 100%;
-        height: 60vh;
-        border-radius: 0.5rem;
-    }
 
     .project-list {
         padding: 0rem 0.5rem;
         margin-top: 2rem;
 
         display: grid;
-        grid-template-columns: 1fr;
-        // grid-template-columns: repeat(auto-fill, minmax(30vw, 1fr));
-        grid-template-rows: masonry;
+        grid-template-columns: repeat(12, 1fr);
         gap: 0.5rem;
-    }
 
-    .project-preview {
-        display: grid;
-        grid-template-columns: 1fr 3fr;
-    }
+        .project-preview {
+            // display: grid;
+            grid-column: 1/13;
+            // display: flex;
 
+            // justify-content: center;
+            align-items: end;
+            border-radius: 2rem;
+
+            .cover-title {
+                // position: absolute;
+                z-index: 2;
+                // display: grid;
+                // justify-items: center;
+
+                margin: 0.5rem 0rem;
+                // padding: 0rem 1rem;
+
+                display: grid;
+                grid-template-columns: repeat(12, 1fr);
+                gap: 0.5rem;
+                align-items: baseline;
+
+                h1 {
+                    grid-column: span 2;
+                    font-size: 1.7rem;
+                    // line-height: 3rem;
+
+                    // color: #e8e6e6;
+                    // background-color: rgb(134, 134, 255);
+                    background-image: linear-gradient(rgb(134, 134, 255), yellow);
+
+                    border-radius: 2rem;
+                    padding: 0rem 1rem;
+                    
+                }
+                
+                h2 {
+                    display: inline;
+                    grid-column: span 1;
+                    font-family: Kleukens;
+                    font-size: 1.5rem;
+                    
+                    // color: #e8e6e6;
+                    // background-color: rgb(134, 134, 255);
+                    
+                    background-image: linear-gradient(rgb(134, 134, 255), yellow);
+                    border-radius: 2rem;
+                    padding: 0.5rem 1rem;
+
+                }
+            }
+
+            .cover-image {
+                height: 90vh;
+                width: 100%;
+                border-radius: 2rem;
+                padding: 0;
+                overflow: hidden;
+                
+                iframe {
+                    width: 100%;
+                    height: 100%;
+                    // border-radius: 0.5rem;
+                }
+            }
+
+            .deep-sea-bots {
+                background-color: #e8e6e69b;
+
+                iframe {
+                    width: 134%;
+                    height: 134%;
+                    // border-radius: 0.5rem;
+                    zoom: 0.75;
+                    -ms-zoom: 0.75;
+                    -moz-transform: scale(0.75);
+                    -moz-transform-origin: 0 0;
+                    -o-transform: scale(0.75);
+                    -o-transform-origin: 0 0;
+                    -webkit-transform: scale(0.75);
+                    -webkit-transform-origin: 0 0;
+                }
+            }
+        }
+    }
 
     h1 {
         display: inline;
@@ -52,45 +124,93 @@
     margin-bottom: 5.5rem;
 
     .cover-title {
-        position: absolute;
-        bottom: 1rem;
+        // position: absolute;
+        // bottom: 1rem;
         z-index: 1;
 
-        padding: 1rem;
+        padding: 0rem 1rem;
         grid-column: 1/13;
-        gap: 1rem;
+        gap: 0.5rem;
+        // align-items: baseline;
 
         display: grid;
         grid-template-columns: repeat(12, 1fr);
+        align-items: baseline;
+
+        h1 {
+            grid-column: span 2;
+            font-size: 1.7rem;
+            // line-height: 3rem;
+
+            color: #010101;
+            // background-color: rgb(134, 134, 255);
+            background-image: linear-gradient(yellow, rgb(134, 134, 255));
+
+            border-radius: 2rem;
+            padding: 0.5rem 1rem;
+
+            // background: rgba(0, 0, 0, 0.2);
+            // mix-blend-mode: difference;
+            // box-shadow: 0px 0px 50px 30px rgb(106 106 106 / 70%);
+        }
+
+        h2 {
+            display: inline;
+            grid-column: span 1;
+            font-family: Kleukens;
+            font-size: 1.5rem;
+
+            color: #000000;
+            background-image: linear-gradient(yellow, rgb(134, 134, 255));
+
+            border-radius: 2rem;
+            padding: 0.5rem 1rem;
+
+            // background-color: rgb(134, 134, 255);
+            // background: rgba(0, 0, 0, 0.2);
+            // mix-blend-mode: difference;
+            // box-shadow: 0px 0px 50px 30px rgb(106 106 106 / 70%);
+        }
+
+
+        .collaborators {
+            grid-column: span 2;
+        }
 
     }
 
-    .headline {
-        grid-column: 1/4;
+    .cover-image {
+        grid-column: 1/13;
+        height: 98vh;
+        margin: 0.5rem;
+        padding: 0;
+        overflow: hidden;
+        border-radius: 2rem;
 
+        iframe {
+            width: 100%;
+            height: 100%;
+        }
     }
 
-    h1 {
-        display: inline;
-        font-size: 3rem;
-        line-height: 3rem;
-        // background-color: rgb(254, 214, 54);
-        color: #e8e6e6;
+    .deep-sea-bots {
+        background-color: #e8e6e6;
+
+        iframe {
+            width: 134%;
+            height: 134%;
+            // border-radius: 0.5rem;
+            zoom: 0.75;
+            -ms-zoom: 0.75;
+            -moz-transform: scale(0.75);
+            -moz-transform-origin: 0 0;
+            -o-transform: scale(0.75);
+            -o-transform-origin: 0 0;
+            -webkit-transform: scale(0.75);
+            -webkit-transform-origin: 0 0;
+        }
     }
 
-    h2 {
-        display: inline;
-        grid-column: span 1;
-        font-family: Kleukens;
-        font-size: 1rem;
-        // background-color: rgb(254, 214, 54);
-        color: #e8e6e6;
-    }
-
-
-    .collaborators {
-        grid-column: span 2;
-    }
 
     .subhead {
         grid-column: 1/13;
@@ -105,22 +225,6 @@
         }
     }
 
-    .cover-image {
-        grid-column: 4/13;
-        height: 100vh;
-
-        // overflow: hidden;
-        div {
-            // width: 100%;
-            // height: 100%;
-        }
-
-        iframe {
-            width: 100%;
-            height: 100%;
-            // border-radius: 0.5rem;
-        }
-    }
 
     .fullwidth-image {
         // grid-column: 3/10;
