--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -47,34 +47,40 @@
                 // position: absolute;
                 z-index: 1;
 
-                display: flex;
-                gap: 0.5rem;
+                // display: flex;
+                display: grid;
+                grid-template-columns: repeat(6, 1fr);
+                gap: 0.5rem 1.5rem;
                 margin: 0.5rem;
                 // margin-top: -4rem;
                 // bottom: 0rem;
                 // width: 100%;
 
                 h1 {
-                    display: inline;
+                    display: block;
                     font-family: "Helvetica";
                     font-size: 3rem;
                     line-height: 2.5rem;
+                    grid-column: span 3;
 
-                    background-color: rgb(254, 214, 54);
+                    // background-color: rgb(254, 214, 54);
                 }
 
                 h2 {
                     display: inline;
-                    max-width: 8vw;
-                    // grid-column: span 1;
+                    // max-width: 8vw;
+                    grid-column: span 2;
                     font-family: Kleukens;
-                    font-size: 0.8rem;
-                    background-color: rgb(254, 214, 54);
+                    // font-size: 0.8rem;
+                    font-size: 1.5rem;
+                    // background-color: rgb(254, 214, 54);
                 }
 
                 .collaborators {
                     // grid-column: span 2;
                     display: inline;
+                    grid-column: 2/5;
+
                 }
             }
         }
