--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -1,96 +1,105 @@
-.work-page {
-    width: 100%;
-    min-height: 100vh;
-
+.work-page,
+.work-section {
     overflow: hidden;
 
     .project-list {
         padding: 0rem 0.5rem;
-        margin-top: 2rem;
+        margin-top: 1rem;
 
         display: grid;
         grid-template-columns: 1fr 1fr;
-        // grid-template-columns: repeat(auto-fill, minmax(30vw, 1fr));
-        grid-template-rows: masonry;
+        // grid-template-rows: masonry;
         gap: 0.5rem;
 
-        a{
-            height:max-content;
+        a {
+            height: max-content;
         }
-        
-        .project-preview {
-            // display: flex;
-            // align-items: flex-end;
-            width: 100%;
-            height:max-content;
-            
-            // margin: 1rem 0rem;
-            
-            .preview-image {
-                // align-self: flex-end;
-                // position: absolute;
-                width: auto;
-                transition: all 0.25s ease;
+    }
+
+    .project-preview {
+        width: 100%;
+        height: max-content;
+
+        .cover-image {
+            width: auto;
+            transition: all 0.25s ease;
+            // margin: 0rem 0.5rem;
+
+            div {
+                width: 100%;
+                height: 100%;
+            }
+
+            img {
+                object-fit: contain;
+            }
+        }
+
+        .cover-title {
+            // position: absolute;
+            z-index: 1;
+
+            display: flex;
+            // display: grid;
+            // grid-template-columns: repeat(6, 1fr);
+            gap: 0.5rem 1.5rem;
+            margin: 0.5rem;
+            // margin-top: -4rem;
+            // bottom: 0rem;
+            // width: 100%;
+
+            // h1 {
+            //     display: block;
+            //     font-family: "Helvetica";
+            //     font-size: 3rem;
+            //     line-height: 2.5rem;
+            //     grid-column: span 3;
+            // }
+
+            // h2 {
+            //     display: inline;
+            //     grid-column: span 2;
+            //     font-family: Kleukens;
+            //     font-size: 1.5rem;
+            // }
+
+            h1 {
+                font-size: 4.5rem;
+                font-weight: 90;
+                line-height: 4rem;
+                font-family: "Helvetica";
+                // display: inline;
+                vertical-align: top;
+                // grid-column: span 3;
+            }
+
+            h2 {
+                display: inline;
+                vertical-align: top;
+                font-size: 1.8rem;
+                font-family: Kleukens;
                 // margin: 0rem 0.5rem;
-
-                div {
-                    width: 100%;
-                    height: 100%;
-                }
-
-                img {
-                    object-fit: contain;
-                }
+                // vertical-align: top;
             }
 
-            .project-text {
-                // position: absolute;
-                z-index: 1;
+            .collaborators {
+                // grid-column: span 2;
+                display: inline;
+                grid-column: 2/5;
 
-                // display: flex;
-                display: grid;
-                grid-template-columns: repeat(6, 1fr);
-                gap: 0.5rem 1.5rem;
-                margin: 0.5rem;
-                // margin-top: -4rem;
-                // bottom: 0rem;
-                // width: 100%;
-
-                h1 {
-                    display: block;
-                    font-family: "Helvetica";
-                    font-size: 3rem;
-                    line-height: 2.5rem;
-                    grid-column: span 3;
-
-                    // background-color: rgb(254, 214, 54);
-                }
-
-                h2 {
-                    display: inline;
-                    // max-width: 8vw;
-                    grid-column: span 2;
-                    font-family: Kleukens;
-                    // font-size: 0.8rem;
-                    font-size: 1.5rem;
-                    // background-color: rgb(254, 214, 54);
-                }
-
-                .collaborators {
-                    // grid-column: span 2;
-                    display: inline;
-                    grid-column: 2/5;
-
-                }
             }
+        }
+
+        .blog-year {
+            display: none;
         }
     }
 
 }
 
-
-.work-post {
-    // padding-top: 4vh;
+.work-page {
+    min-height: 100vh;
+    width: 100vw;
 
 }
 
